finish delete route for first MVP

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Simple React App</title>
+  <title>Court Reserve</title>
   <script src="https://kit.fontawesome.com/e0e88aa118.js" crossorigin="anonymous"></script>
 </head>
 
