--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Court Reserve</title>
+  <link rel=”icon” href=”%PUBLIC_URL%/favicon.ico”>
   <script src="https://kit.fontawesome.com/e0e88aa118.js" crossorigin="anonymous"></script>
 </head>
 
