--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+  <meta property="og:title" content="Leverage" />
+  <meta property="og:type" content="website" />
+  <meta name=”image” property=”og:image” content=”%PUBLIC_URL%/Leverage.png” />
+  <meta property="og:url" content="https://aa-leverage.herokuapp.com/" />
+  <!-- <meta property="og:description"
+        content="can enter description here" /> -->
   <meta charset="utf-8" />
   <title>Court Reserve</title>
   <link rel=”icon” href=”%PUBLIC_URL%/favicon.ico”>
