--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 
 <head>
   <meta property="og:title" content="Court Reserve" />
   <meta property="og:type" content="website" />
-  <meta name=”image” property=”og:image” content=”%PUBLIC_URL%/CourtReserve.” />
+  <meta name=”image” property=”og:image” content=”%PUBLIC_URL%/CourtReserve.png” />
   <meta property="og:url" content="https://aa-court-reserve.herokuapp.com/" />
   <!-- <meta property="og:description"
         content="can enter description here" /> -->
