--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta property="og:title" content="Court Reserve" />
   <meta property="og:type" content="website" />
-  <meta name=”image” property=”og:image” content=”%PUBLIC_URL%/CourtReserve.png” />
+  <meta name="image" property="og:image" content="%PUBLIC_URL%/CourtReserve.png" />
   <meta property="og:url" content="https://aa-court-reserve.herokuapp.com/" />
   <!-- <meta property="og:description"
         content="can enter description here" /> -->
