--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,7 +10,7 @@
         content="can enter description here" /> -->
   <meta charset="utf-8" />
   <title>Court Reserve</title>
-  <link rel=”icon” href=”%PUBLIC_URL%/favicon.ico”>
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
   <script src="https://kit.fontawesome.com/e0e88aa118.js" crossorigin="anonymous"></script>
 </head>
 
